--- a/views/contacto.html
+++ b/views/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VT Midias</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body class="contacto">
     <!-- Menú de navegación -->
@@ -12,7 +12,7 @@
         <nav class="menu">
             <div class="logo">
                 <a href="/index.html">
-                    <img src="/images/LOGO_VT_500x500.png" alt="VT Midias" width="500" height="500">
+                    <img src="images/logovt_500x500.png" alt="VT Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
@@ -59,13 +59,13 @@
         <div class="footer-contenedor">
             <div class="redes-sociales">
                 <a href="https://facebook.com" target="_blank" class="social-icon">
-                    <img src="/images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
+                    <img src="images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
                 </a>
                 <a href="https://youtube.com" target="_blank" class="social-icon">
-                    <img src="/images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
+                    <img src="images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
                 </a>
                 <a href="https://instagram.com" target="_blank" class="social-icon">
-                    <img src="/images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
+                    <img src="images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
                 </a>
             </div>
             <p class="direccion">Dirección: Calle Alcalá, 77 Madrid, España</p>
