--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VT Midias</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body class="presupuesto">
     <!-- Menú de navegación -->
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="/index.html">
-                    <img src="/images/LOGO_VT_500x500.png" alt="VT Midias" width="500" height="500">
+                <a href="./index.html">
+                    <img src="images/logovt_branco500x500.png" alt="VT Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/views/portifolio.html">Portifolio</a></li>
-                <li><a href="/views/servicios.html">Servicios</a></li>
-                <li><a href="/views/presupuesto.html">Presupuesto</a></li>
-                <li><a href="/views/contacto.html">Contacto</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./views/portifolio.html">Portifolio</a></li>
+                <li><a href="./views/servicios.html">Servicios</a></li>
+                <li><a href="./views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="./views/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -28,8 +28,8 @@
 <main>
         <!-- Sección de Banner -->
         <div class="banner-section">
-            <a href="/views/presupuesto.html" class="banner-link">
-                <img src="/images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
+            <a href="./views/presupuesto.html" class="banner-link">
+                <img src="images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
             </a>
         </div>
     <!-- Sección con formulario -->
@@ -67,13 +67,13 @@
     <div class="footer-contenedor">
         <div class="redes-sociales">
             <a href="https://facebook.com" target="_blank" class="social-icon">
-                <img src="/images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
+                <img src="images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
             </a>
             <a href="https://youtube.com" target="_blank" class="social-icon">
-                <img src="/images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
+                <img src="images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
             </a>
             <a href="https://instagram.com" target="_blank" class="social-icon">
-                <img src="/images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
+                <img src="images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
             </a>
         </div>
         <p class="direccion">Dirección: Calle Alcalá, 77 Madrid, España</p>
