--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,13 +6,13 @@
     <title>VT Midias</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body class="contacto">
+<body class="home">
     <!-- Menú de navegación -->
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="images/logovt_500x500.png" alt="VT Midias" width="500" height="500">
+                    <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
