--- a/views/servicios.html
+++ b/views/servicios.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VT Midias</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body class="servicios">
+<body class="home">
     <!-- Menú de navegación -->
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="/index.html">
-                    <img src="/images/LOGO_VT_500x500.png" alt="VT Midias" width="500" height="500">
+                <a href="./index.html">
+                    <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/views/portifolio.html">Portifolio</a></li>
-                <li><a href="/views/servicios.html">Servicios</a></li>
-                <li><a href="/views/presupuesto.html">Presupuesto</a></li>
-                <li><a href="/views/contacto.html">Contacto</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./views/portifolio.html">Portifolio</a></li>
+                <li><a href="./views/servicios.html">Servicios</a></li>
+                <li><a href="./views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="./views/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
