--- a/views/contacto.html
+++ b/views/contacto.html
@@ -11,7 +11,7 @@
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
@@ -27,8 +27,8 @@
 <main>
         <!-- Sección de Banner -->
         <div class="banner-section">
-            <a href="./views/presupuesto.html" class="banner-link">
-                <img src="/images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
+            <a href="../views/presupuesto.html" class="banner-link">
+                <img src="images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
             </a>
         </div>
 
