--- a/views/servicios.html
+++ b/views/servicios.html
@@ -11,7 +11,7 @@
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="/index.html">
+                <a href="./index.html">
                     <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
