--- a/views/servicios.html
+++ b/views/servicios.html
@@ -12,15 +12,15 @@
         <nav class="menu">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
+                    <img src="../images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./views/portifolio.html">Portifolio</a></li>
-                <li><a href="./views/servicios.html">Servicios</a></li>
-                <li><a href="./views/presupuesto.html">Presupuesto</a></li>
-                <li><a href="./views/contacto.html">Contacto</a></li>
+                <li><a href="portifolio.html">Portifolio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="presupuesto.html">Presupuesto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
         <!-- Sección de Banner -->
         <div class="banner-section">
             <a href="./views/presupuesto.html" class="banner-link">
-                <img src="./images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
+                <img src="../images/image_pagina_web_1920x500.png" alt="Banner de la Empresa" class="banner-img" width="1920" height="500">
             </a>
         </div>
 
@@ -61,13 +61,13 @@
         <div class="footer-contenedor">
             <div class="redes-sociales">
                 <a href="https://facebook.com" target="_blank" class="social-icon">
-                    <img src="./images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
+                    <img src="../images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
                 </a>
                 <a href="https://youtube.com" target="_blank" class="social-icon">
-                    <img src="./images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
+                    <img src="../images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
                 </a>
                 <a href="https://instagram.com" target="_blank" class="social-icon">
-                    <img src="./images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
+                    <img src="../images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
                 </a>
             </div>
             <p class="direccion">Dirección: Calle Alcalá, 77 Madrid, España</p>
