--- a/views/portifolio.html
+++ b/views/portifolio.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="portifolio.html">Portifolio</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="presupuesto.html">Presupuesto</a></li>
