--- a/views/portifolio.html
+++ b/views/portifolio.html
@@ -6,7 +6,7 @@
     <title>VT Midias</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
-<body class="home">
+<body class="portifolio">
     <!-- Menú de navegación -->
     <header class="encabezado">
         <nav class="menu">
