--- a/views/servicios.html
+++ b/views/servicios.html
@@ -17,10 +17,10 @@
             </div>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="portifolio.html">Portifolio</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="presupuesto.html">Presupuesto</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="/views/portifolio.html">Portifolio</a></li>
+                <li><a href="/views/servicios.html">Servicios</a></li>
+                <li><a href="/views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="/views/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
