--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,11 @@ body {
     flex-direction: column;   
 }
 
-body.home .menu a[href="/index.html"],
-body.portifolio .menu a[href="/views/portifolio.html"],
-body.servicios .menu a[href="/views/servicios.html"],
-body.presupuesto .menu a[href="/views/presupuesto.html"],
-body.contacto .menu a[href="/views/contacto.html"] {
+body.home .menu a[href="../index.html"],
+body.portifolio .menu a[href="../views/portifolio.html"],
+body.servicios .menu a[href="../views/servicios.html"],
+body.presupuesto .menu a[href="../views/presupuesto.html"],
+body.contacto .menu a[href="../views/contacto.html"] {
     background-color: rgb(252, 252, 252);
     color: blue;
     font-weight: bold;
